bugfix: [WEB] remove overflow

--- a/web_heat/src/styles/global.css
+++ b/web_heat/src/styles/global.css
@@ -10,5 +10,5 @@ body {
   background: #121214;
   display: flex;
   justify-content: center;
-
+  overflow: hidden;
 }
